--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/view.html
@@ -105,12 +105,12 @@ $(function(){
 			{data: "HERKL", title: "[[#{HQP_L_ORIGIN}]]"},//Origin
 			{data: "VBELN2", title: "[[#{HQP_L_SALES_DOC_NO}]]"},//Sales Doc. No.
 			{data: "ZFOBDT", title: "[[#{HQP_L_ONBOARD_DATE}]]"},//Onboard Date
-			{data: "KWERT", title: "[[#{HQP_L_FREIGHT_FEE}]]"},//Freight Fee
+			//{data: "KWERT", title: "[[#{HQP_L_FREIGHT_FEE}]]"},//Freight Fee
 			{data: "BSTKD", title: "[[#{HQP_L_PO_NO}]]"}//P.O. No.
 		],
 		columnDefs: [
-			{targets: [0, 1, 5, 8, 9, 10, 12], className: "dt-body-center"},
-			{targets: [6, 7, 11], className: "dt-body-right"}
+			{targets: [0, 1, 5, 8, 9, 10, 11], className: "dt-body-center"},
+			{targets: [6, 7], className: "dt-body-right"}
 		],
 		ajax: {
 			url: "[[${BASE_PATH}]]/order/delivery/view/data",
