--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/write.html
@@ -145,7 +145,11 @@ $(document).ready(function() {
 					{
 						if (opener != null)
 						{
-							opener.doSearch();
+							try
+							{
+								opener.doSearch();	
+							}
+							catch (e) {}
 						};
 					};
 					
