--- a/jwebppy/src/main/resources/templates/portal/common/authentication/login.html
+++ b/jwebppy/src/main/resources/templates/portal/common/authentication/login.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title th:text="#{PTL_T_APP_NAME}"></title>
 
-<link rel="stylesheet" type="text/css" th:href="@{/portal/css/login.css}" />
+<link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/login.css}" />
 <link rel="stylesheet" type="text/css" class="ui" th:href="@{/portal/css/semantic/semantic.min.css}" />
 
 <script th:src="@{/portal/js/jquery/jquery.min.js}"></script>
