--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ar/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ar/list.html
@@ -21,15 +21,13 @@
 				<th th:text="#{HQP_L_PO_NO}"></th>
 				<td>
 					<div class="input-area">
-						<input type="text" id="pFromPoNo" name="pFromPoNo" class="custom-ui-scope" th:value="${pFromPoNo}">
-						<input type="text" id="pToPoNo" name="pToPoNo" class="custom-ui-scope" th:value="${pToPoNo}">
+						<input type="text" id="pFromPoNo" name="pFromPoNo" class="custom-ui-scope" th:value="${pFromPoNo}"> - <input type="text" id="pToPoNo" name="pToPoNo" class="custom-ui-scope" th:value="${pToPoNo}">
 					</div>			
 				</td>
 				<th th:text="#{HQP_L_AR_INVOICE_NO}"></th>
 				<td>
 					<div class="input-area">
-						<input type="text" id="pFromInvoiceNo" name="pFromInvoiceNo" class="custom-ui-scope" th:value="${pFromInvoiceNo}">
-						<input type="text" id="pToInvoiceNo" name="pToInvoiceNo" class="custom-ui-scope" th:value="${pToInvoiceNo}">
+						<input type="text" id="pFromInvoiceNo" name="pFromInvoiceNo" class="custom-ui-scope" th:value="${pFromInvoiceNo}"> - <input type="text" id="pToInvoiceNo" name="pToInvoiceNo" class="custom-ui-scope" th:value="${pToInvoiceNo}">
 					</div>			
 				</td>				
 			</tr>
