--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/export/main.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/export/main.html
@@ -9,8 +9,8 @@
 	<!-- Meta -->
 	<th:block th:replace="portal/layout/iv/hq/parts/common/fragments/meta"></th:block>
 	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" th:href="@{/portal/css/main.css}">
-	<link rel="stylesheet" type="text/css" th:href="@{/portal/css/gnb.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/hq/parts/main.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/hq/parts/gnb.css}">
 	
 	<!-- JavaScript -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
