--- a/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/top.html
@@ -2,7 +2,7 @@
 <!-- Top menu area. This comment is mandatory to make a space between top and body.-->
 </div>
 <script>
-function makeGmb()
+function makeGnb()
 {
 	var menu = [];
     
@@ -14,6 +14,6 @@ function makeGmb()
 };
 
 $(document).ready(function() {
-	makeGmb();
+	makeGnb();
 });
 </script>
