--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
@@ -175,7 +175,7 @@ $(window).on("load", function() {
 
 $(function(){
 	//상단 메뉴 생성 공통함수
-	makeGmb();
+	makeGnb();
 	
 	$(".header .logo-doobizplus").on("click", function() {
 		goHome()
