--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/js.html
@@ -25,3 +25,4 @@
 <script th:src="@{/portal/js/portal.utils.modal.js}"></script>
 <script th:src="@{/portal/js/datatables/dataTablesDefault.js}"></script>
 <script th:src="@{/portal/js/portal.utils.order.js}"></script>
+<script th:src="@{/portal/js/portal.utils.download.js}"></script>
