--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
@@ -27,3 +27,4 @@
 <script th:src="@{/portal/js/portal.utils.order.js}"></script>
 <script th:src="@{/portal/js/datatables/jqueryDefault.js}"></script>
 <script th:src="@{/portal/js/portal.ui.gnb.js}"></script>
+<script th:src="@{/portal/js/portal.utils.download.js}"></script>
