--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
@@ -34,7 +34,7 @@
 <script>
 $(document).ready(function() {
 	//상단 메뉴 생성 공통함수
-	makeGmb();
+	makeGnb();
 	
 	$(".header .logo-doobizplus").on("click", function() {
 		goHome()
